--- a/manage/.settings/org.eclipse.wst.common.component
+++ b/manage/.settings/org.eclipse.wst.common.component
@@ -8,7 +8,7 @@
         <dependent-module archiveName="hg-common-1.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/hg-common/hg-common">
             <dependency-type>uses</dependency-type>
         </dependent-module>
-        <property name="context-root" value="manage"/>
         <property name="java-output-path" value="/manage/target/classes"/>
+        <property name="context-root" value="hg-manage"/>
     </wb-module>
 </project-modules>
